--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,20 @@
   color: #61dafb;
 }
 
+.paragraph {
+  color: blueviolet;
+  background-color: aquamarine;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 10px;
+  text-align: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
